--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
         go-version: '1.23' 
 
     - name: k6 Kurulumu ve Testi Başlatma
-      uses: k6io/action@v1.4.0
+      uses: grafana/k6-action@v0.3.1
       with:
         k6-version: latest
     
