--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.repository_owner }}/rollbackproject-api
+  DOCKER_IMAGE: ghcr.io/nahidef/rollbackproject-api
   
 jobs:
   build-test-push:
